--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ nav ul li a {
 
 #about .div-img-bg {
   padding-bottom: 30px;
-  border: 20px solid #183380;
+  border: 10px solid #183380;
 }
 
 #about .div-img-bg .about-img img {
@@ -304,7 +304,7 @@ nav ul li a {
   box-shadow: 0px 0px 85px 0px rgba(0, 0, 0, 0.14);
   margin-top: 0px;
   margin-left: 0px !important;
-  height: 400px;
+  /* height: 400px; */
   object-fit: cover;
 }
 
